tests/baselines/reference/abstractPropertyNegative.errors.txt
tests/cases/compiler/abstractPropertyNegative.ts(11,7): error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'prop' from class 'B'.
tests/cases/compiler/abstractPropertyNegative.ts(11,7): error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'raw' from class 'B'.
tests/cases/compiler/abstractPropertyNegative.ts(18,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.


==== tests/cases/compiler/abstractPropertyNegative.ts (3 errors) ====
    interface A {
        prop: string;
        m(): void;
    }
    abstract class B implements A {
        abstract prop: string;
        abstract raw: string;
        abstract readonly ro: string;
        abstract m(): void;
    }
    class C extends B {
          ~
!!! error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'prop' from class 'B'.
          ~
!!! error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'raw' from class 'B'.
        ro = "readonly please";
        m() { }
    }
    let c = new C();
    c.ro = "updated";
    ~~~~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.